# python2

./: .gitignore  README.md  TC2TP_Rules.html  TC2TP_Rules.md  clear.py  main.py  pyproject.toml  ~$$新建 Microsoft Visio 绘图.~vsdx  新建 Microsoft Visio 绘图.vsdx
tc2tp/: case_reader.py  make_sub_tc.py  make_tp.py  make_tp.py_bac  manager.py  models.py  utils.py
tc2tp/common/: __init__.py  config.py  constant.py  constant.py_bac  custom_error.py  db.py  logger.py
tc2tp/importer/: __init__.py  import_data.py
tc2tp/query_builder/: __init__.py  query.py
tc2tp/ss_parser/: __init__.py  source_selection.py
tc2tp/tc_parser/: __init__.py  parser.py
testTC/: C919-VC-AUX12.7 TP版自动化3secondlater.xlsx
testTC/新建文件夹/: C919-TP-AUX-S205.xlsx  C919-VC-AUX12.7 TP版自动化3secondlater-new.xlsx
