[tool.poetry]
name = "tc2tp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xlrd = "^1.2.0"
pymongo = "^3.11.0"
xlwt = "1.3.0"
XlsxWriter = "^1.3.7"
SQLAlchemy = "^1.3.20"
PyMySQL = "^0.10.1"
alembic = "^1.4.3"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
PyYAML = "^5.3.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
